# recycling-robot

./: .dockerignore  .env  .gitignore  CAMERA_INTEGRATION.md  Dockerfile  Dockerfile.camera  Makefile  PIPELINE_README.md  README.md  REPOSITORY_CLEANUP_SUMMARY.md  VERIFICATION_CHECKLIST.md  camera_test.py  check_pipeline_status.sh  docker-compose.yml  final_motor_test.py  gpio_validation_test.py  host_gpio_service.py  key_listener.py  motor_test.py  quick_pipeline_test.sh  requirements-docker.txt  requirements.txt  setup_simplify.sh  test_pipeline_comprehensive.py  test_stepper.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  api.Dockerfile  app.py  docker-compose.yml  requirements-docker.txt  requirements.txt  robot.db  robot.db-wal  ros2.Dockerfile  test_basic.py
frontend/: .env  Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ros2/: .gitignore  Dockerfile
ros2/src/recycling_robot/: package.xml  setup.py  test_motor_controller.py
ros2/src/recycling_robot/config/: camera.yaml
ros2/src/recycling_robot/launch/: robot.launch.py
ros2/src/recycling_robot/recycling_robot/: capture_server.py
ros2/src/recycling_robot/recycling_robot/nodes/: camera_node  camera_node.py  classifier_node.py  key_input_node.py  mock_camera_node.py  pipeline_coordinator_node.py  sorting_node.py  web_node.py
ros2/src/recycling_robot/recycling_robot/utils/: __init__.py  motor_controller.py  stepper_motor_controller  stepper_motor_controller.py
ros2/src/recycling_robot/scripts/: test_pipeline.py
scripts/: arducam_diagnostic.sh  browser_stream.py  build.sh  camera_diagnostic.sh  camera_fix.sh  camera_publisher.py  camera_stream.sh  camera_viewer.py  inference_test.py  local_test.html  ros.sh  run_inference.py  start_camera_stream.sh  test.mjpg  test_api.py  test_stream.html  (+5 more)
src/recycling_robot/: CMakeLists.txt  camera_test.py  package.xml  setup.cfg  setup.py
src/recycling_robot/action/: SortItem.action
src/recycling_robot/core/: camera.py  classifier.py
src/recycling_robot/launch/: dev.launch.py  development.launch.py  minimal.launch.py  run_all.py
src/recycling_robot/msg/: ClassificationResult.msg
src/recycling_robot/nodes/: camera.py
src/recycling_robot/recycling_robot/nodes/: camera.py  camera_node.py  classifier.py  classifier_node.py  web.py  web_bridge_node.py
src/recycling_robot/recycling_robot/utils/: camera.py  classifier.py
src/recycling_robot/srv/: ClassifyImage.srv
(+81 files in other folders)
